# noita-clone

./: .gitignore  CMakeLists.txt  Doita.sln  Doita.vcxproj  Doita.vcxproj.filters  README.md  compile_flags.txt  game.c  makefile
Doita/: Doita.vcxproj  Doita.vcxproj.filters  Main.cpp
Doita/old/: old_program.txt
Doita/src/: IntVector.cpp  Main.cpp  SandChunk.cpp  SandWorld.cpp
old/: old_program.txt
src/: CameraController.cpp  DebugTypes.h  IntVector.h  Main.cpp  NeighbourTD.cpp  NeighbourTD.h  RandomRange.cpp  RandomRange.h  SandChunk.cpp  SandData.cpp  SandData.h  SandTile.cpp  SandWorld.cpp  raygui.cpp
